ICE-7045 added support for nesting layouts; added code to automatically resize child layouts when a parent layout is resized; added code to communicate collapsed state of a pane on toggle ajax requests; cleaned up CSS styles; added access to layout widget in javascript; addedheader and footer facets in pane meta; added aria role attributes to buttons; added effect attributes; modified selectors to prevent attaching behaviors to child layouts; added destroy function; added localization for close, collapse and expand buttons titles; finished properties tlddoc
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@52285 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/borderlayout/borderlayout.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/borderlayout/borderlayout.css
@@ -14,102 +14,23 @@
  * NOTE: For best code readability, view this with a fixed-space font and tabs equal to 4-chars
  */
 
-/*
- *	PANES & CONTENT-DIVs
- */
-.ui-layout-pane { /* all 'panes' */
-	background:	#FFF; 
-	border:		1px solid #BBB;
-	padding:	5px; 
-	overflow:	auto;
-	/* DO NOT add scrolling (or padding) to 'panes' that have a content-div,
-	   otherwise you may get double-scrollbars - on the pane AND on the content-div
-	   - use ui-layout-wrapper class if pane has a content-div
-	   - use ui-layout-container if pane has an inner-layout
-	*/
-	}
-	/* (scrolling) content-div inside pane allows for fixed header(s) and/or footer(s) */
-	.ui-layout-content {
-		padding:	10px;
-		position:	relative; /* contain floated or positioned elements */
-		overflow:	auto; /* add scrolling to content-div */
-	}
-
-/*
- *	UTILITY CLASSES
- *	Must come AFTER pane-class above so will override
- *	These classes are NOT auto-generated and are NOT used by Layout
- */
-.layout-child-container,
-.layout-content-container {
-	padding:	0;
-	overflow:	hidden;
-}
-.layout-child-container {
-	border:		0; /* remove border because inner-layout-panes probably have borders */
-}
-.layout-scroll {
-	overflow:	auto;
-}
-.layout-hide {
-	display:	none;
-}
-
-/*
- *	RESIZER-BARS
- */
-.ui-layout-resizer	{ /* all 'resizer-bars' */
-	border:			1px solid #BBB;
-	border-width:	0;
-	}
-
-	.ui-layout-resizer-dragging {	/* CLONED resizer being dragged */
-		border: 	 1px solid #BBB;
-	}
-	.ui-layout-resizer-north-dragging,
-	.ui-layout-resizer-south-dragging {
-		border-width:	1px 0;
-	}
-	.ui-layout-resizer-west-dragging,
-	.ui-layout-resizer-east-dragging {
-		border-width:	0 1px;
-	}
-
-		/* sliding resizer - add 'outside-border' to resizer on-hover 
-		 * this sample illustrates how to target specific panes and states */
-		.ui-layout-resizer-north-sliding-hover	{ border-bottom-width:	1px; }
-		.ui-layout-resizer-south-sliding-hover	{ border-top-width:		1px; }
-		.ui-layout-resizer-west-sliding-hover	{ border-right-width:	1px; }
-		.ui-layout-resizer-east-sliding-hover	{ border-left-width:	1px; }
-
-/*
-	.ui-layout-toggler-hover , // need when NOT resizable 
-	.ui-layout-resizer-hover .ui-layout-toggler-hover { // need specificity when IS resizable 
-		background-color: #FC6;
-		opacity: 1.00;
-		filter:  alpha(opacity=100);
-	}
-*/
-	.ui-layout-toggler-north ,
-	.ui-layout-toggler-south {
-		border-width: 0 1px; /* left/right borders */
-	}
-	.ui-layout-toggler-west ,
-	.ui-layout-toggler-east {
-		border-width: 1px 0; /* top/bottom borders */
-	}
-	/* hide the toggler-button when the pane is 'slid open' */
-	.ui-layout-resizer-sliding  .ui-layout-toggler {
-		display: none;
-	}
-
-/* ---------------------------------------------------------------------- */
-
 .ice-ace-borderlayout {
 	height: 100%;
 	width: 100%;
 	min-height: 600px;
 	min-width: 500px;
+}
+
+.ice-ace-borderlayout .ui-layout-pane-padding {
+	padding:	5px;
+}
+
+.ice-ace-borderlayout .ui-layout-pane-scroll {
+	overflow:	auto;
+}
+
+.ice-ace-borderlayout .ui-layout-resizer	{
+	border-width:	0 !important;
 }
 
 .ice-ace-borderlayout .ui-layout-pane .ui-widget-header {
